@@ -1,3 +1,13 @@
+2011-06-08  Kevin Ollivier  <kevino@theolliviers.com>
+
+        Reviewed by Eric Seidel.
+
+        Add export symbols to debugger headers.
+        https://bugs.webkit.org/show_bug.cgi?id=27551
+
+        * debugger/Debugger.h:
+        * debugger/DebuggerCallFrame.h:
+
 2011-06-08  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Darin Adler.
